hobbies.css
body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}
.main-image {
  width: 100vw;
  max-width: 100vw;
  overflow: hidden;
}
.image-container {
  width: 100%;
  height: auto;
  position: relative;
  overflow: hidden;
  /* margin-bottom: 40px; */
  /* border: 2px solid black; */
  /* margin: 30px; */
  /* background-color: aqua; */
}
.origami-gallery-container {
  width: 80%;
  margin: 5% 8% 10% 12%;
  /* padding: 40px 0; */
  height: 1500px;
  overflow: hidden;
  transition: all 0.5 ease-in-out;
  position: relative;
}
.origami-gallery-container::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100px;
  background: linear-gradient(
    to bottom,
    rgba(255, 255, 255, 0) 0%,
    /* Fully transparent at the top */ rgba(255, 255, 255, 0.1) 20%,
    /* Slightly transparent */ rgba(255, 255, 255, 0.3) 40%,
    /* Gradually more opaque */ rgba(255, 255, 255, 0.7) 70%,
    /* Stronger opacity */ rgba(255, 255, 255, 0.9) 80%,
    rgba(255, 255, 255, 1) 100% /* Fully opaque at the bottom */
  );
  pointer-events: none;
}
.origami-gallery {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  gap: 40px;
}
.column {
  display: flex;
  flex: 1;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 40px;
}
.origami-image {
  width: 100%;
  height: auto;
  object-fit: cover;
  object-position: center;
  cursor: pointer;
}
.top-overlay {
  position: absolute;
  top: 10px;
  left: 10px;
  display: flex;
  gap: 5px;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}
.top-overlay span,
.top-overlay i {
  margin: 0;
  background-color: black;
  color: white;
  border-radius: 3px;
  transition: opacity 0.3s ease;
  height: 15px;
  width: 15px;
  padding: 8px;
  display: flex; /* Enables flexbox alignment */
  justify-content: center; /* Centers content horizontally */
  align-items: center; /* Centers content vertically */
}
.top-overlay i {
  opacity: 0;
  cursor: pointer;
}

.bottom-overlay {
  position: absolute;
  bottom: 10px;
  right: 10px;
  display: flex;
  gap: 10px;
  justify-content: flex-end;
  align-items: center;
  z-index: 5;
}
.icon-box {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: black;
  border-radius: 3px;
  padding: 5px 10px;
  transition: width 0.6s ease, opacity 0.3s ease;
  overflow: hidden;
  height: 20px;
  width: 15px;
  opacity: 0;
  cursor: pointer;
  transform-origin: left;
  margin-left: auto;
  text-decoration: none;
}

.icon-box > :first-child {
  margin-right: auto;
}
.icon-box > :last-child {
  margin-right: auto;
}

.icon-box i {
  font-size: 15px;
  color: white;
}

.icon-box:hover {
  width: 100px;
  opacity: 1;
}
.icon-box .icon-text {
  color: white;
  white-space: nowrap;
  opacity: 0; /* Initially hidden */
  transition: opacity 0.3s ease; /* Smooth transition for showing text */
  font-size: 12px;
  margin-left: 5px; /* Space between icon and text */
}
.icon-box:hover .icon-text {
  opacity: 1;
}
/* .icon-text {
  background-color: brown;
  color: white;
  white-space: nowrap;
  opacity: 0;
  transition: opacity 0.3s ease;
  font-size: 12px;
} */
.image-container:hover .icon-box {
  opacity: 1;
}
.image-container:hover::after {
  opacity: 1;
}
.image-container:hover .top-overlay i {
  opacity: 1;
}
.image-container::after {
  content: '';
  position: absolute;
  bottom: 4px;
  left: 0;
  right: 0;
  height: 10%; /* Adjust the height to only cover the gradient area */
  background: linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0));
  pointer-events: none; /* Makes the gradient non-interactive */
  opacity: 0;
}

.modal {
  display: none;
  position: fixed;
  z-index: 10;
  padding-top: 100px;
  padding-bottom: 100px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
  overflow: auto;
  justify-content: center;
  align-items: center;
}
.modal-content {
  margin: auto;
  display: block;
  max-width: 50%;
  height: auto;
  width: auto;
}

.modal-content {
  animation-name: slide-in;
  animation-duration: 1s;
}
@keyframes slide-in {
  from {
    transform: translateY(100%);
    opacity: 0;
  }
  to {
    transform: translateY(0);
    opacity: 1;
  }
}

.modal i {
  position: fixed;
  top: 15px;
  left: 35px;
  color: white;
  font-size: 25px;
  transition: 0.3s;
}

.modal i:hover,
.modal i:focus {
  color: #d5d5d5;
  text-decoration: none;
  cursor: pointer;
}

.tag {
  color: white;
  position: fixed;
  left: 75px;
  background-color: rgba(0, 0, 0, 0.4);
  padding: 10px 20px;
  font-size: 25px;
  z-index: 100;
}

a {
  color: inherit;
  text-decoration: none;
  cursor: pointer;
}
a:hover {
  color: rgb(0, 0, 0, 0.8);
}
.navbar {
  height: 100vh;
  width: 140px;
  position: fixed;
  right: 0;
  top: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #212429;
  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
  z-index: 10;
  padding-top: 100px;
  overflow: hidden;
  transition: transform 0.3s ease;
  transform: translateX(140px);
}
.navbar.active {
  transform: translateX(0px);
}

.navbar-nav {
  width: 100%;
  list-style: none;
  padding: 10px;
  margin: 0;
}
.navbar-link {
  width: 100%;
  padding: 15px 0;
  text-align: left;
  text-decoration: none;
  color: white;
  display: flex;
  align-items: center;
  font-size: 14px;
  padding-left: 20px;
  transition: background-color 0.3s, color 0.3s;
}

.navbar-link i {
  font-size: 20px; /* Icon size */
  display: block;
  margin-bottom: 5px;
  margin-right: 10px;
}

.navbar-link:hover {
  background-color: #e9ecef;
  color: #00bcd4;
}

.navbar-link.active {
  background-color: #007bff;
  color: #fff;
}

.navbar-link.active i {
  color: #fff;
}

.navicon-container {
  position: fixed;
  right: 0;
  height: 40px;
  width: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #d7d7d7;
  margin: 10px;
  border-radius: 25%;
  background-color: #212429;
  cursor: pointer;
  transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease; /* Smooth transition for hover effects */
  z-index: 11;
}

.navicon-container:hover {
  /*   background-color: white;
  color: black; */
  transform: scale(1.1);
}

.show-more-container {
  text-align: right;
  margin: 20px 10px 50px 10px;
  position: relative;
}

#toggleButton {
  padding: 10px 20px;
  background-color: #212429;
  color: white;
  font-size: 10px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease, transform 0.3s ease;
}

#toggleButton:hover {
  background-color: #3d444f;
  transform: scale(1.1);
}

#toggleButton i {
  margin-right: 5px;
}

html {
  scroll-behavior: smooth;
}

.random {
  height: 200vh;
}
.mainPlant-container {
  position: relative;
  z-index: 10;
}
.pin-wrapper {
  position: relative;
  z-index: 1;
}

